--- a/index.html
+++ b/index.html
@@ -333,10 +333,38 @@
             border-left: 6px solid var(--accent);
         }
 
+        .oia-card.o-card {
+            border-left: 6px solid var(--secondary);
+        }
+
+        .oia-card.i-card {
+            border-left: 6px solid var(--pink);
+        }
+
+        .oia-card.a-card {
+            border-left: 6px solid var(--success);
+        }
+
         .oia-card i {
             color: var(--primary);
             margin-bottom: 10px;
             display: block;
+        }
+
+        .oia-card.o-card i {
+            color: var(--secondary);
+        }
+
+        .oia-card.i-card i {
+            color: var(--pink);
+        }
+
+        .oia-card.a-card i {
+            color: var(--success);
+        }
+
+        .oia-card.accent-card i {
+            color: var(--accent);
         }
 
         .oia-card h3 {
@@ -604,6 +632,56 @@
 
         .btn-capture:active {
             transform: scale(0.9);
+        }
+
+        /* Toast Notification */
+        #toast-container {
+            position: fixed;
+            top: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 5000;
+            pointer-events: none;
+        }
+
+        .toast {
+            background: var(--bg-card);
+            color: var(--text-main);
+            padding: 14px 24px;
+            border-radius: 18px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+            border: 1px solid var(--border);
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            font-weight: 600;
+            font-size: 14px;
+            animation: toastIn 0.5s cubic-bezier(0.16, 1, 0.3, 1), toastOut 0.5s 2.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+            white-space: nowrap;
+        }
+
+        @keyframes toastIn {
+            from {
+                transform: translateY(-100px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes toastOut {
+            from {
+                transform: translateY(0);
+                opacity: 1;
+            }
+
+            to {
+                transform: translateY(-100px);
+                opacity: 0;
+            }
         }
 
         /* Bottom Navbar - Anchored */
@@ -967,6 +1045,8 @@
         </button>
     </header>
 
+    <div id="toast-container"></div>
+
     <main>
         <!-- VISTA: DEVOCIONAL -->
         <div id="view-devotional" class="view active">
@@ -1006,21 +1086,21 @@
                 </div>
             </div>
 
-            <div class="oia-card">
+            <div class="oia-card o-card">
                 <h3><i data-lucide="eye" style="width:16px;"></i> OBSERVACIÓN</h3>
                 <textarea id="dev-o" rows="3" placeholder="¿Qué dice el texto?" oninput="markUnsaved()"></textarea>
             </div>
-            <div class="oia-card">
+            <div class="oia-card i-card">
                 <h3><i data-lucide="search" style="width:16px;"></i> INTERPRETACIÓN</h3>
                 <textarea id="dev-i" rows="3" placeholder="¿Qué significa?" oninput="markUnsaved()"></textarea>
             </div>
-            <div class="oia-card">
+            <div class="oia-card a-card">
                 <h3><i data-lucide="heart" style="width:16px;"></i> APLICACIÓN</h3>
                 <textarea id="dev-a" rows="3" placeholder="¿Cómo lo aplico a mi vida?"
                     oninput="markUnsaved()"></textarea>
             </div>
             <div class="oia-card accent-card">
-                <h3><i data-lucide="message-circle" style="width:16px; color: var(--accent);"></i> MI ORACIÓN</h3>
+                <h3><i data-lucide="message-circle" style="width:16px;"></i> MI ORACIÓN</h3>
                 <textarea id="dev-p" rows="3" placeholder="Escribe tu oración de hoy..."
                     oninput="markUnsaved()"></textarea>
             </div>
@@ -1206,6 +1286,17 @@
         </div>
 
         <script>
+            // --- TOAST NOTIFICATIONS ---
+            function showToast(msg, icon = 'check-circle') {
+                const container = document.getElementById('toast-container');
+                const toast = document.createElement('div');
+                toast.className = 'toast glass';
+                toast.innerHTML = `<i data-lucide="${icon}" style="width:18px; color:var(--primary);"></i> ${msg}`;
+                container.appendChild(toast);
+                lucide.createIcons();
+                setTimeout(() => toast.remove(), 3500);
+            }
+
             // --- BIBLE DATA ---
             const BOOKS = [{ id: 1, n: "Génesis", c: 50, nt: false }, { id: 2, n: "Éxodo", c: 40, nt: false }, { id: 3, n: "Levítico", c: 27, nt: false }, { id: 4, n: "Números", c: 36, nt: false }, { id: 5, n: "Deuteronomio", c: 34, nt: false }, { id: 6, n: "Josué", c: 24, nt: false }, { id: 7, n: "Jueces", c: 21, nt: false }, { id: 8, n: "Rut", c: 4, nt: false }, { id: 9, n: "1 Samuel", c: 31, nt: false }, { id: 10, n: "2 Samuel", c: 24, nt: false }, { id: 11, n: "1 Reyes", c: 22, nt: false }, { id: 12, n: "2 Reyes", c: 25, nt: false }, { id: 13, n: "1 Crónicas", c: 29, nt: false }, { id: 14, n: "2 Crónicas", c: 36, nt: false }, { id: 15, n: "Esdras", c: 10, nt: false }, { id: 16, n: "Nehemías", c: 13, nt: false }, { id: 17, n: "Ester", c: 10, nt: false }, { id: 18, n: "Job", c: 42, nt: false }, { id: 19, n: "Salmos", c: 150, nt: false }, { id: 20, n: "Proverbios", c: 31, nt: false }, { id: 21, n: "Eclesiastés", c: 12, nt: false }, { id: 22, n: "Cantares", c: 8, nt: false }, { id: 23, n: "Isaías", c: 66, nt: false }, { id: 24, n: "Jeremías", c: 52, nt: false }, { id: 25, n: "Lamentaciones", c: 5, nt: false }, { id: 26, n: "Ezequiel", c: 48, nt: false }, { id: 27, n: "Daniel", c: 12, nt: false }, { id: 28, n: "Oseas", c: 14, nt: false }, { id: 29, n: "Joel", c: 3, nt: false }, { id: 30, n: "Amós", c: 9, nt: false }, { id: 31, n: "Abdías", c: 1, nt: false }, { id: 32, n: "Jonás", c: 4, nt: false }, { id: 33, n: "Miqueas", c: 7, nt: false }, { id: 34, n: "Nahúm", c: 3, nt: false }, { id: 35, n: "Habacuc", c: 3, nt: false }, { id: 36, n: "Sofonías", c: 3, nt: false }, { id: 37, n: "Hageo", c: 2, nt: false }, { id: 38, n: "Zacarías", c: 14, nt: false }, { id: 39, n: "Malaquías", c: 4, nt: false }, { id: 40, n: "Mateo", c: 28, nt: true }, { id: 41, n: "Marcos", c: 16, nt: true }, { id: 42, n: "Lucas", c: 24, nt: true }, { id: 43, n: "Juan", c: 21, nt: true }, { id: 44, n: "Hechos", c: 28, nt: true }, { id: 45, n: "Romanos", c: 16, nt: true }, { id: 46, n: "1 Corintios", c: 16, nt: true }, { id: 47, n: "2 Corintios", c: 13, nt: true }, { id: 48, n: "Gálatas", c: 6, nt: true }, { id: 49, n: "Efesios", c: 6, nt: true }, { id: 50, n: "Filipenses", c: 4, nt: true }, { id: 51, n: "Colosenses", c: 4, nt: true }, { id: 52, n: "1 Tesalonicenses", c: 5, nt: true }, { id: 53, n: "2 Tesalonicenses", c: 3, nt: true }, { id: 54, n: "1 Timoteo", c: 6, nt: true }, { id: 55, n: "2 Timoteo", c: 4, nt: true }, { id: 56, n: "Tito", c: 3, nt: true }, { id: 57, n: "Filemón", c: 1, nt: true }, { id: 58, n: "Hebreos", c: 13, nt: true }, { id: 59, n: "Santiago", c: 5, nt: true }, { id: 60, n: "1 Pedro", c: 5, nt: true }, { id: 61, n: "2 Pedro", c: 3, nt: true }, { id: 62, n: "1 Juan", c: 5, nt: true }, { id: 63, n: "2 Juan", c: 1, nt: true }, { id: 64, n: "3 Juan", c: 1, nt: true }, { id: 65, n: "Judas", c: 1, nt: true }, { id: 66, n: "Apocalipsis", c: 22, nt: true }];
 
@@ -1517,7 +1608,9 @@
 
             function updateProfile() {
                 appState.user.name = document.getElementById('profile-name').value;
-                save(); renderProfile(); alert('Perfil actualizado ✨'); switchTab('devotional');
+                save(); renderProfile();
+                showToast('Perfil actualizado ✨');
+                switchTab('devotional');
             }
 
             // --- TABS ---
