--- a/index.html
+++ b/index.html
@@ -1111,6 +1111,8 @@
 
         <!-- VISTA: BIBLIA -->
         <div id="view-bible" class="view">
+            <h2>Registro de Lectura</h2>
+            <br>
             <div class="stat-card">
                 <h2 style="font-size: 32px;"><span id="total-pct">0</span>%</h2>
                 <p style="font-size: 13px; color: var(--text-muted); margin-top: 4px;">Biblia Completa</p>
